# $Id$

2009-02-16	Ivan Y. Khvostishkov

	* main/Flow/RedirectView.class.php: ability to build complex array
	values upon redirect (involving PrimitiveDateRange, for example).

2009-02-13	Ivan Y. Khvostishkov

	* main/Flow/CleanRedirectView.class.php: parent class for RedirectView,
	clean redirect without model.

2009-02-13	Evgeniy N. Sokolov

	* main/Utils/TextUtils.class.php: friendlyNumber() now works with float
	and negative numbers.

2009-02-13	Ivan Y. Khvostishkov

	* main/Utils/TuringTest/Color.class.php: flyweight pattern implemented.

2009-02-10	Vladlen Y. Koshelev

	* main/Flow/MultiPrefixPhpViewResolver.class.php: makeView() hook and
	isPrefixDisabled() added.

2008-02-06	Denis M. Gabaidulin

	* main/Utils/SortHelper.class.php: sorting multi-dimensional assoc array
	recursively.

2008-02-05	Denis M. Gabaidulin

	* main/Utils/DateUtils.class.php: makeDatesListByRange() added.
	Function used to create normalized date list by IntervalUnit.

2008-02-04	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: makeCartesianProduct() function added.

2009-01-28	Ivan Y. Khvostishkov

	* main/Base/DateRange.class.php: safeSetStart(), safeSetEnd() to ensure
	that the start will never overlaps the end.

2008-01-20	Denis M. Gabaidulin

	* main/Utils/Mobile/MobileRequestDetector.class.php: use regular array
	instead HttpRequest. Warning: Broken BC!

2008-01-19	Denis M. Gabaidulin

	* core/Form/Filters/UnserializeFilter.class.php: added.

2009-01-19	Vladlen Y. Koshelev

	* main/Base/LightMetaProperty.class.php: makePrimitive() added.

	* core/Form/Primitive.class.php: prototyped() and prototypedIdentifier() - 
	shortcuts for making object's properties primitives.

2009-01-19	Konstantin V. Arkhipov

	* meta/types/InetType.class.php: goes sizeless.

2009-01-17	Vladlen Y. Koshelev

	* main/UnifiedContainer/UnifiedContainerWorker.class.php,
	test/misc/DAOTest.class.php: generate distinct count query in case of